[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Weapons/Sword.png" type="Texture" id=1]
[ext_resource path="res://Sword.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.93335
height = 25.688

[sub_resource type="Animation" id=2]
resource_name = "idle"

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 9.4, 110.0, 9.4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 15, 6 ), Vector2( 15, 6 ), Vector2( 15, 6 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "swingleft"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.22 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -9.4, -110.0, -9.4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -15, 6 ) ]
}

[node name="Sword" type="Area2D"]
position = Vector2( -15, 6 )
rotation = -0.164061
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.141123, -10.6673 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0469294, -10.0984 )
rotation = 1.49012e-08
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/swing = SubResource( 3 )
anims/swingleft = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.22
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Sword_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
